<resources>
    <string name="app_name">MyKos</string>
    <string name="OAuth_ID_Token">365108517044&#8211;3eapi8tg4eo6dqjv3h158995mfmkub47.apps.googleusercontent.com</string>
    <!-- Placeholder text -->
    <string name="placeholderstrip">--------</string>
    <string name="placeholderpoint">&#8230;</string>
    <string name="placeholder">Placeholder</string>
    <string name="opennavdrawer">Open Nav Drawer</string>
    <string name="closenavdrawer">Close Nav Drawer</string>

    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <!-- Main Menu -->
    <string name="dashboard">Dashboard</string>
    <string name="overview">Overview</string>
    <string name="settings">Settings</string>

    <!-- Room Details -->
    <string name="room">Room</string>
    <string name="roomid">Room ID</string>
    <string name="emptydata">---</string>
    <string name="emptydate">--/--/----</string>

    <string name="name0">Name</string>
    <string name="name">Name : </string>

    <string name="contact0">Contact</string>
    <string name="contact">Contact : </string>
    <string name="inputcontact">Input Contact&#8230;</string>

    <string name="arrivedate0">Arrive Date</string>
    <string name="arrivedate">Arrive Date : </string>
    <string name="inputarrivedate">Input Arrive Date&#8230;</string>

    <string name="paydeadline0">Pay Deadline</string>
    <string name="paydeadline">Pay Deadline : </string>
    <string name="inputpaydeadline">Input Pay Deadline&#8230;</string>

    <string name="reset">Reset</string>

    <!-- Dashboard -->
    <string name="search">Search</string>
    <string name="inputname">Input Name&#8230;</string>

    <string name="sort">Sort</string>
    <string name="sortbyname">Sort by name</string>
    <string name="sortbyid">Sort by ID</string>
    <string name="sortbydeadline">Sort by deadline</string>

    <!-- Overview -->
    <string name="occupied">Occupied</string>
    <string name="empty">Empty</string>
    <string name="reserved">Reserved</string>

    <!-- Settings -->
    <string name="numberofrooms">Number of rooms</string>
    <string name="howmanyroom">How many room?</string>

    <string name="roomidvalue">Room ID value</string>
    <string name="choose">Choose</string>
    <string-array name="roomidvalue_array">
        <item>Numeric</item>
        <item>Alphabetic</item>
    </string-array>

    <string name="maximalduedate">Maximum due date</string>
    <string name="howmanyday">How many day?</string>

    <!-- Fragment tag-->
    <string name="loginFragment">loginFragment</string>
    <string name="dashboardFragment">dashboardFragment</string>
    <string name="overviewFragment">overviewFragment</string>
    <string name="settingsFragment">settingsFragment</string>
    <string name="roomDetailFragment">roomDetailFragment</string>


</resources>
