<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="10dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:background="@drawable/rounded_dialog"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>

    <RadioGroup
        android:id="@+id/radio_sort_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:minWidth="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:id="@+id/radio_sort_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sortbyname"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radio_sort_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sortbyid"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_sort_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sortbydeadline"
            android:textSize="16sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btn_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="20dp"
            app:backgroundTint="@android:color/transparent"/>

        <TextView
            android:id="@+id/btn_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:textSize="16sp"
            android:textColor="@color/colorLightGreen"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="10dp"
            app:backgroundTint="@android:color/transparent"/>
    </LinearLayout>

</LinearLayout>