<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="10dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:background="@drawable/rounded_dialog"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>

    <Spinner
        android:id="@+id/spinnerInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:entries="@array/roomidvalue_array"
        android:prompt="@string/choose"
        android:gravity="center_vertical"
        android:background="@drawable/rounded_spinner"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btn_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="20dp"
            app:backgroundTint="@android:color/transparent"/>

        <TextView
            android:id="@+id/btn_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textSize="16sp"
            android:textColor="@color/colorLightGreen"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="10dp"
            app:backgroundTint="@android:color/transparent"/>
    </LinearLayout>

</LinearLayout>